--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,9 @@ beautifulsoup4
 langchain_groq
 torch
 streamlit
+protobuf==3.20.1 
+opentelemetry-api==1.15.0 
+opentelemetry-sdk==1.15.0 
+opentelemetry-exporter-otlp==1.15.0
+
 
