--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,6 @@ protobuf==3.20.1
 opentelemetry-api==1.15.0 
 opentelemetry-sdk==1.15.0 
 opentelemetry-exporter-otlp==1.15.0
-sqlite3 >= 3.35.0
+sqlite3 == 3.35.0
 
 
